# app-frontend

./: .env  .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-feature.yml  docker-build.yml
templates/: index.html
